Case 60: Fix pdf download link

--- a/casestudies/60/casestudy/www/layout/case_id_60.html
+++ b/casestudies/60/casestudy/www/layout/case_id_60.html
@@ -5,7 +5,7 @@
 
 
 <head>
-  <title>Privacidad y el Interés Público: Frederick, MD, News-Post y la Historia de Bruce Ivins | Privacidad y el Inter&eacute;s P&uacute;blico: Frederick, MD, News-Post y la Historia de Bruce Ivins. Primera Parte.
+  <title>Privacidad y el InterÃ©s PÃºblico: Frederick, MD, News-Post y la Historia de Bruce Ivins | Privacidad y el Inter&eacute;s P&uacute;blico: Frederick, MD, News-Post y la Historia de Bruce Ivins. Primera Parte.
   </title>
  
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -90,7 +90,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_60.html" title="Home"><span>Privacidad y el Interés Público: Frederick, MD, News-Post y la Historia de Bruce Ivins</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_60.html" title="Home"><span>Privacidad y el InterÃ©s PÃºblico: Frederick, MD, News-Post y la Historia de Bruce Ivins</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -140,7 +140,7 @@ font-style:italic;
     <div class="content"><div class="content">
 <ul class="menu">
 <li class="printpdf">
-<a href="../../files/global/60/Privacidad&#32;e&#32;Interés&#32;Público&#32;text&#32;A.pdf" target="_blank">Download this case as a PDF</a></li>
+<a href="../../files/global/60/Privacidad%20e%20Interes%20Publico%20text%20A.pdf" target="_blank">Download this case as a PDF</a></li>
 </ul>
 </div>
 </div>
@@ -160,7 +160,7 @@ font-style:italic;
 		
 		
 		</div>		
-		<h1 class="title">Privacidad y el Interés Público: Frederick, MD, <i>News-Post</i> y la Historia de Bruce Ivins</h1>
+		<h1 class="title">Privacidad y el InterÃ©s PÃºblico: Frederick, MD, <i>News-Post</i> y la Historia de Bruce Ivins</h1>
 		
 		
 		
@@ -183,7 +183,7 @@ font-style:italic;
 	<em>Este case fue escrito por Kathleen Gilsinan para la Iniciativa de Estudios &ldquo;Knight Case&rdquo; a Escuela de Graduados de Periodismo de la Universidad de Columbia. El patrocinador de la facultad fue el profesor Ruth Padawer. El financiamiento fue proporcionado por la Fundaci&oacute;n John S. y James L. Knight Foundation.</em></p>
 
 <div>
-	<strong>Para más información:</strong></div>
+	<strong>Para mÃ¡s informaciÃ³n:</strong></div>
 <div>
 	E-mail: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
 <div>
