--- a/casestudies/61/casestudy/www/layout/case_id_61.html
+++ b/casestudies/61/casestudy/www/layout/case_id_61.html
@@ -5,7 +5,7 @@
 
 
 <head>
-  <title>Privacidad e Interés Público: La Evidencia Contra Ivins. Segunda Parte. | Privacidad e Inter&eacute;s P&uacute;blico: La Evidencia Contra Ivins. Segunda Parte.
+  <title>Privacidad e InterÃ©s PÃºblico: La Evidencia Contra Ivins. Segunda Parte. | Privacidad e Inter&eacute;s P&uacute;blico: La Evidencia Contra Ivins. Segunda Parte.
   </title>
  
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -90,7 +90,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_61.html" title="Home"><span>Privacidad e Interés Público: La Evidencia Contra Ivins. Segunda Parte.</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_61.html" title="Home"><span>Privacidad e InterÃ©s PÃºblico: La Evidencia Contra Ivins. Segunda Parte.</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -140,7 +140,7 @@ font-style:italic;
     <div class="content"><div class="content">
 <ul class="menu">
 <li class="printpdf">
-<a href="../../files/global/61/Privacidad&#32;e&#32;Interés&#32;Público&#32;text&#32;B.pdf" target="_blank">Download this case as a PDF</a></li>
+<a href="../../files/global/61/Privacidad%20e%20Interes%20Publico%20text%20B.pdf" target="_blank">Download this case as a PDF</a></li>
 </ul>
 </div>
 </div>
@@ -160,7 +160,7 @@ font-style:italic;
 		
 		
 		</div>		
-		<h1 class="title">Privacidad e Interés Público: La Evidencia Contra Ivins. Segunda Parte.</h1>
+		<h1 class="title">Privacidad e InterÃ©s PÃºblico: La Evidencia Contra Ivins. Segunda Parte.</h1>
 		
 		
 		
@@ -184,7 +184,7 @@ font-style:italic;
 		<em>Este case fue escrito por Kathleen Gilsinan para la Iniciativa de Estudios &ldquo;Knight Case&rdquo; a Escuela de Graduados de Periodismo de la Universidad de Columbia. </em><em>La Universidad de los Andes traducida de la versi&oacute;n en espa&ntilde;ol. </em><em>El patrocinador de la facultad fue el profesor Ruth Padawer. El financiamiento fue proporcionado por la Fundaci&oacute;n John S. y James L. Knight Foundation.</em></p>
 	
 	<div>
-	<strong>Para más información:</strong></div>
+	<strong>Para mÃ¡s informaciÃ³n:</strong></div>
 <div>
 	E-mail: <a href="mailto:ccnmtl+casestudies@columbia.edu" style="color: rgb(17, 85, 204);" target="_blank">ccnmtl+casestudies@columbia.edu</a></div>
 <div>
