Sync changes from production back to github

--- a/casestudies/21/casestudy/www/layout/case_id_21_id_241.html
+++ b/casestudies/21/casestudy/www/layout/case_id_21_id_241.html
@@ -279,7 +279,10 @@ font-style:italic;
 <p>ABC policy&mdash;and his own moral convictions&mdash;called for withholding a rape accuser&rsquo;s identity unless she chose to go public. To show a photograph of the accuser with her face blurred did not breach this policy, in his own mind, but on the other hand, he did not think ABC had ever done it before. He could see that others might argue the question differently.<sup><a name="txtfn26" title="txtfn26"></a><a href="case_id_21_id_241.html#fn26">[26]</a></sup> Avram also knew that opinions might differ about whether the news value of the photos outweighed their unsavory content, or the fact that they showed the alleged rape victim in an unflattering light. In general, ABC News policy prohibited putting a rape victim &ldquo;on trial.&rdquo; Did a photograph that showed her performing an exotic dance, or in a state of apparent intoxication, cross that line? Avram believed that, under the circumstances, the answer was no. But he also knew he was exhausted from a string of 20-hour reporting days, and did not entirely trust his own clarity of thought.</p>
 <p><i>Listen to Avram discuss why he decided to call Smith.</i><br />
 <span class="footnoteslength"><b>Length:</b> 32 sec</span><br />
-<img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/Avram%20on%20calling%20Smith.mp3" class="audiofile" /></p>
+<audio controls>
+  <source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/Avram%20on%20calling%20Smith.mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+</audio>
 <p>Whenever an ABC news producer faced a concern of this kind, s/he was supposed to call Smith, head of the Editorial Quality Office, for guidance. At 7 a.m., Avram reached Smith on her cell phone, explained the situation, and sent her the photos.</p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
