--- a/casestudies/21/casestudy/www/layout/case_id_21_id_65_gid_5_c_video.html
+++ b/casestudies/21/casestudy/www/layout/case_id_21_id_65_gid_5_c_video.html
@@ -25,37 +25,6 @@
 <script type="text/javascript" src="js/audioimage.js"></script>
 <script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
 <script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
-      $(document).ready(function(){
-        $("a.greybox").click(function(){
-          var t = this.title || this.innerHTML || this.href;
-          GB_show(t,this.href,600,800);
-          return false;
-        });
-      });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
-        $('a.media').media();
-    });
-</script>
 
 <style>
 #main .title
@@ -263,15 +232,7 @@ font-style:italic;
     <div class="content">
 	
 	
-	<p id='preview'>The player will show in this paragraph</p>
-<script type='text/javascript'>
-var s1 = new SWFObject('player.swf','player','420','286','9');
-s1.addParam('allowfullscreen','true');
-s1.addParam('allowscriptaccess','always');
-s1.addParam('flashvars','file=../../files/videos/65/vid_wnt_041106.flv&autostart=true');
-s1.write('preview');
-</script>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TV_Zx7TVhn8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 </div>	
       </div>
