Switch to html5 audio
Much of this work was completed. A few outliers needed to be adjusted.

--- a/casestudies/1/casestudy/www/layout/case_id_1_id_49_pid_45.html
+++ b/casestudies/1/casestudy/www/layout/case_id_1_id_49_pid_45.html
@@ -298,7 +298,9 @@ font-style:italic;
     <div class="content"><p>For several years after the <em>Tribune</em> case, Singapore&rsquo;s government brought no further cases against foreign news organizations. In the decade since the Newspaper and Printing Presses Act had gone into effect, the foreign press had learned to walk a fine line. Stories about Singapore were carefully considered prior to publication, according to Professor Plott. &ldquo;You scrutinize the stories you do about politics in Singapore very carefully, not to distort what you are saying, but to close every avenue for legal action,&rdquo; he says. &ldquo;You are just simply much more careful about it because you realize they are likely to sue.&rdquo; If an article upset local authorities, foreign publications were quick to remedy the situation by granting the Singapore government right of reply.</p>
 <p><em>Listen to Plott on how the Western press covers Singapore.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Plott%20on%20covering%20Singapore_lev.mp3" class="audiofile" alt="" /></p></div>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Plott%20on%20covering%20Singapore_lev.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Plott%20on%20covering%20Singapore_lev.mp3" type="audio/mpeg"></audio>
+</p></div>
 
 
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
