--- a/casestudies/15/casestudy/www/layout/case_id_15_id_163.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_163.html
@@ -285,7 +285,11 @@ font-style:italic;
 	The root of the problems, Smith felt, was that decisions about the Web had been made absent a long-term strategy; instead, the newsroom process had grown organically. &quot;As the paper grew and got more complex, the system just didn&#39;t really adapt,&quot; Smith says. &quot;There wasn&#39;t the pressure to make the change.&quot; Specifically, the <em>Times Union</em> had not figured out how to incorporate the Internet into its detailed operational structure. Smith saw the Web&#39;s potential to carry breaking news&mdash;something readers had come to expect&mdash;but the paper&#39;s old content management system (CMS) made it cumbersome to get news to the website quickly. Moreover, the paper&#39;s Internet group functioned much like another features department, rather than being embraced as a promising new channel to deliver all manner of news and services to readers.</p>
 <p>
 	<em>Listen to Smith discuss the organic growth of </em><em>Times Union.</em><br />
-	<img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_grew_organically.mp3" /></p>
+	<!--img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_grew_organically.mp3" /-->
+    <audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_grew_organically.mp3" type="audio/mpeg"></audio>
+    
+    </p>
+    
 <p>
 	Smith had a strong, even emotional, commitment to the role of newspapers in the community. For the <em>Times Union&#39;</em>s 150-year anniversary in 2006, Smith was invited to the state library to look at the first edition of the <em>Albany Morning Times</em>. Holding the copy in his hands, he recalls &quot;getting a lump in my throat.&quot; He wrote in an <span class="extlink">editorial</span> later that week: &quot;Our values remain fundamentally unchanged from those our founders laid out: to keep an eye on what goes on in our community, to bring readers the news they need to know, to act independently.&quot;</p>
 <p>
