--- a/casestudies/15/casestudy/www/layout/case_id_15_id_164.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_164.html
@@ -285,7 +285,11 @@ font-style:italic;
 	Looking at this, Smith worried that readers would increasingly decide that the daily paper offered too little news too late. If that happened, he feared the paper would be forced to downsize, which in turn might force it out of business&mdash;as had happened at other publications. &ldquo;If we weren&rsquo;t efficient, we were going to lose the ballgame,&rdquo; Smith says. &ldquo;We simply wouldn&rsquo;t have enough people to deliver a product that was sufficiently differentiated in the marketplace to survive... In journalism, you can&rsquo;t cut your way to prosperity.&rdquo;</p>
 <p>
 	<em>Listen to Smith&rsquo;s discussion on risk.</em><br />
-	<img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_risk.mp3" /></p>
+	<!-- img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_risk.mp3" /-->
+    <audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_risk.mp3" type="audio/mpeg"></audio>
+    
+    </p>
+    
 <p>
 	Smith and his team were fortunate that Hearst was a privately held company. Unlike public companies with their focus on short-term financial results, Hearst could make decisions about the newspapers it owned without pressure from stockholders to steadily increase the value of shares or dividends. It meant freedom to take risks, to strategize and set long-term targets with enviable flexibility. But no one knew what the strategy should be.</p>
 <p>
