--- a/casestudies/15/casestudy/www/layout/case_id_15_id_165.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_165.html
@@ -287,7 +287,9 @@ font-style:italic;
 	Without a single place for everyone to see assignments and information, staff manually moved information through the newsroom, one piece of paper and email at a time. Stories were emailed or hand delivered through a factory-like system of editors, reporters, pagination specialists, and clerks. More than once, miscommunication led two reporters to appear at the same community press conference. Other times, the paper missed an important story because one person thought another reporter had it covered. &ldquo;It&rsquo;s like the outfielder and the centerfielder both going for the fly ball, and each one sort of taking a step back expecting the other to get it,&rdquo; Smith explains. &ldquo;The ball drops between the two.&rdquo; There were so many steps in the system that when mistakes were made, it was often difficult to pinpoint the source.</p>
 <p>
 	<em>Listen to Smith&rsquo;s explanation of lost opportunities.</em><br />
-	<img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_lost_opportunities.mp3" /></p>
+	<!-- img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_lost_opportunities.mp3" /-->
+    <audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_lost_opportunities.mp3" type="audio/mpeg"></audio>
+</p>
 <p>
 	Inefficiencies extended to other parts of the newsroom. Smith recalls arriving early to the building and passing a printed photo assignment taped to the studio door for the first photographer to find. &ldquo;It was just amazing that in the 21st century we were still depending upon a piece of paper taped to a door to communicate with someone,&rdquo; Smith says. &ldquo;What happens if the first photographer in the morning did have another assignment and never got to that note?&rdquo;</p>
 <p>
