--- a/casestudies/17/casestudy/www/layout/case_id_17_id_199.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_199.html
@@ -263,7 +263,9 @@ font-style:italic;
 <p>At that point, Bakersfield.com was still essentially an electronic version of the paper. &ldquo;It was just one big shovel dump at night,&rdquo; Jenner says of the website&rsquo;s content. &ldquo;There was no video, no community activity, no blogs.&rdquo; The paper&rsquo;s website wasn&rsquo;t even user friendly. &ldquo;We had this really cumbersome registration process where you had to basically give your DNA to get in. It was too much. Still, people would almost do that just to get in,&rdquo; he says.</p>
 <p><em>Listen to Jenner&rsquo;s reaction to the surprising rise in online readership.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 50 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Jenner_on_growth.mp3" /></p>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Jenner_on_growth.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Jenner_on_growth.mp3" type="audio/mpeg"></audio>
+</p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
 <p><a name="fn2" title="fn2"></a><a href="case_id_17_id_199.html#txtfn2" class="textfn">[2]</a> Author&rsquo;s interview with Mike Jenner on May 14, 2007 in Bakersfield, California. All further quotes from Jenner, unless otherwise attributed, are from this interview.</p>
