--- a/casestudies/17/casestudy/www/layout/case_id_17_id_204.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_204.html
@@ -263,7 +263,9 @@ font-style:italic;
 </em>In light of juggling these tasks, Logan says she saw no option but to send off portions of her notes as her blog entries. She did not feel she had time to work the notes into short blog features as Swenson had been doing. &ldquo;I thought I would make it as much of a story as I could, and I would make it as accurate as possible given the time constraint. But they were just notes,&rdquo; she says of her posts. Jenner, says Logan, reassured her that her notes would be fine as blog postings, and added that she should not worry about spelling errors. For a few days, Logan was too busy even to look at the website to read her own work.</p>
 <p><em>Listen to Logan&rsquo;s expectations for her blog.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 43 sec</span><br />
-<img width="28" height="30" border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Logan_thought_process.mp3" class="audiofile" alt="" /></p>
+<!-- img width="28" height="30" border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Logan_thought_process.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/Logan_thought_process.mp3" type="audio/mpeg"></audio>
+</p>
 <p>When she did, what she saw dismayed her. Her blog entries contained a number of typos and grammatical errors. For example, in a <a class="pdflink" target="_blank" href="../../files/bakersfield/post3_20_10_26.pdf">posting made March 20 at 10:26 a.m.</a>, Logan had written: &ldquo;Laskowski observed the kitchen has not been cleaned with the breakfast items were still in the kitchen and possible a light lunch was prepared.&rdquo; It was the first time she realized her postings had not been edited. Poor grammar was one thing, but what about mistakes? As she emailed Swenson on March 21:</p>
 <blockquote>
 <p>I think it&rsquo;s dangerous to put what are essentially my notes straight onto the web without anyone reading them. I fear something libelous will slip into the copy if it hasn&rsquo;t already.</p>
