--- a/casestudies/19/casestudy/www/layout/case_id_19_id_218.html
+++ b/casestudies/19/casestudy/www/layout/case_id_19_id_218.html
@@ -251,7 +251,9 @@ font-style:italic;
 <p>What excited her most about the prospect was its potential to introduce more transparency into the reporting process. She envisioned the <em>News-Press</em> communicating more fully with its readers&mdash;actively soliciting their input, and publishing new facts and documents on news-press.com as it received them, rather than hoarding and summarizing the information for the paper edition. Reporters could encourage readers to do their own reporting and contact the paper with what they discovered.</p>
 <p><em>Listen to McCurry-Ross discuss transparency:</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 22 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Cindy%20McCurry-Ross%20transparency.mp3" class="audiofile" alt="" /></p>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Cindy%20McCurry-Ross%20transparency.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Cindy%20McCurry-Ross%20transparency.mp3" type="audio/mpeg"></audio>
+</p>
 <p>The paper, she thought, would in essence be announcing to its audience: &ldquo;We&rsquo;re going to share with you what we find out when we find it out, not down the road.&rdquo; In turn, the paper would ask its readers to do the same. Reporting would become a collaborative effort between the <em>News-Press</em> and its community.</p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
