--- a/casestudies/2/casestudy/www/layout/case_id_2_id_68.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_68.html
@@ -292,7 +292,9 @@ font-style:italic;
 </blockquote>
 <p><em>Listen to Wiley on fairness in documentaries.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 35 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Wiley_on_balance.mp3" class="audiofile" alt="" /></p>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Wiley_on_balance.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Wiley_on_balance.mp3" type="audio/mpeg"></audio>
+</p>
 <p>With a hot-button topic like abortion, expands Fanning, &ldquo;everybody&rsquo;s going into a film like this with all of their antennae out.&quot;</p>
 <blockquote>
 <p>This is one of those films where you have an obligation as a journalist to be extremely careful of being fair to the subject. You know you&rsquo;re going to be scrutinized. [But] if you respect the people who are going to be in your story, if you respect that they come to those conclusions, those positions, in honesty, and if you can say to yourself I&rsquo;m going to be fair to them, then you can function.</p>
@@ -303,7 +305,9 @@ font-style:italic;
 </blockquote>
 <p><em>Listen to Aronson on journalistic objectivity.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 39 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Aronson_on_balance.mp3" class="audiofile" alt="" /></p>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Aronson_on_balance.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/frontline/Aronson_on_balance.mp3" type="audio/mpeg"></audio>
+</p>
 <p>That goal shaped her strategy. &ldquo;Really going inside the pro-life movement was important to me, and giving them a voice was really important to me. It was also extremely important for me to go inside the pro-choice movement and look at what they were feeling were their strongest arguments. I was like a conduit,&rdquo; she explains. But first she had to decide what story she wanted to tell.</p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
