--- a/casestudies/20/casestudy/www/layout/case_id_20_id_225.html
+++ b/casestudies/20/casestudy/www/layout/case_id_20_id_225.html
@@ -245,7 +245,9 @@ font-style:italic;
 <p>As it had with the leaked Kessler audit, the <em>News-Press</em> posted the city&rsquo;s refutation. The paper&rsquo;s editorial board, meanwhile, issued its position. &ldquo;In sorting out this mess, the first step is to replace the people responsible for it,&rdquo; the July 18 editorial read. &ldquo;Heads simply have to roll.&rdquo;<sup><a title="txtfn3" name="txtfn3"></a><a href="case_id_20_id_225.html#fn3">[3]</a></sup></p>
 <p><i>Listen to McCurry-Ross describe posting the audit.</i><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 10 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/McCurry-Ross%20posting%20audit.mp3" class="audiofile" alt="" /></p>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/McCurry-Ross%20posting%20audit.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/McCurry-Ross%20posting%20audit.mp3" type="audio/mpeg"></audio>
+</p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
 <p><a title="fn1" name="fn1"></a><a class="textfn" href="case_id_20_id_225.html#txtfn1">[1]</a> The<em> News-Press</em> has never published the name of the source.</p>
