--- a/casestudies/20/casestudy/www/layout/case_id_20_id_227.html
+++ b/casestudies/20/casestudy/www/layout/case_id_20_id_227.html
@@ -247,7 +247,9 @@ font-style:italic;
 </blockquote>
 <p><i>Listen to Warren describe his reaction to reader contributions.</i><br />
 <span class="footnoteslength"><strong>Length:</strong> 56 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Warren%20stroke%20of%20good%20luck.mp3" class="audiofile" alt="" /></p>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Warren%20stroke%20of%20good%20luck.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Warren%20stroke%20of%20good%20luck.mp3" type="audio/mpeg"></audio>
+</p>
 <p>Ruane had a different perspective. &ldquo;A lot of [the posts were] opinions and just general comments,&rdquo; he says. &ldquo;There were threats... [and] somebody searching for girlfriends.&rdquo; He did, however, follow up on reader suggestions of what to investigate. One example was a question that appeared in the forums several times: Did Cape Coral need sewers? Ruane cited a member of City Council who felt that installing sewers throughout Cape Coral was not a priority&mdash;rather, the city urgently needed drinking water infrastructure, and could install sewers at a later date.</p>
 <p>Some other intriguing questions appeared as well. How much would it cost for the city to withdraw from its contract with MWH and start over? What was included in the hourly rates MWH charged? Would the cost of coffee provided for MWH employees go up once Cape Coral&rsquo;s first Starbucks was built? Ruane incorporated some such questions into his coverage, but few of them inspired full stories of their own.</p>
 <p>In general, Ruane found the forum system &ldquo;bulky and inefficient.&rdquo; &ldquo;Posters should be required to state their specific question or situation... without going into lengthy dissertations and opinion pieces,&rdquo; he wrote in a memo after monitoring the forums about an hour a day for a week.</p></div>
