--- a/casestudies/20/casestudy/www/layout/case_id_20_id_230.html
+++ b/casestudies/20/casestudy/www/layout/case_id_20_id_230.html
@@ -243,7 +243,9 @@ font-style:italic;
 <p>Cull felt that, other than the Kessler audit, the newspaper received no concrete benefit from crowdsourcing. He advocated the method, however, to the extent that it might help the paper secure an inside source. &ldquo;I think [crowdsourcing] has a whole lot of potential if you&rsquo;re prepared to be inundated with lots of stuff that you can&rsquo;t use,&rdquo; he summarizes. He also felt that it was useful for news-press.com to provide readers with a place to register discontent. The activity on the forums was clear evidence of citizens&rsquo; anger with city officials, the extent of which a traditional news story might be unable to capture.</p>
 <p><i>Listen to Cull&rsquo;s conclusions about the value of crowdsourcing.</i><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 18 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20talk%20radio.mp3" /></p>
+<!-- img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20talk%20radio.mp3" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/newspress/Jeff%20Cull%20talk%20radio.mp3" type="audio/mpeg"></audio>
+</p>
 <p>Executive Editor Marymont wished that the <em>News-Press</em> had explained the concept of crowdsourcing, and the style of its investigation, more thoroughly in its print edition. She reflects:</p>
 <blockquote>
 <p>Just as this was new to us... it was vastly different for our readers, too. They weren&rsquo;t accustomed to watching something like this develop... Online readers, I think, knew what was going on, but our print readers wished I had done more with columns and stories about what we were doing.</p>
