--- a/casestudies/23/casestudy/www/layout/case_id_23_id_263.html
+++ b/casestudies/23/casestudy/www/layout/case_id_23_id_263.html
@@ -333,7 +333,9 @@ font-style:italic;
 <p>Maines had been a police reporter early in his career, but after nearly 20 years as a database reporter, he had come to see beat reporting as &ldquo;a young person&rsquo;s job.&rdquo; He elaborates: &ldquo;After a while, you&rsquo;ve seen one car wreck, you&rsquo;ve seen them all.&rdquo; He found the pace and uncertainty of beat reporting frustrating&mdash;the unreturned phone calls, the refused FOIA requests. &ldquo;When you&rsquo;re doing [database reporting] there seems to be a level of clarity about it... You&rsquo;ve got the data... You&rsquo;re looking for something that you don&rsquo;t know if you&rsquo;ll find, but if you do, it might be great.&rdquo;</p>
 <p><i>Listen to Rosenhause describe her vision of an investigative team.</i><br />
 <span class="footnoteslength"><b>Length:</b> 1 min 21 sec</span><br />
-<img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Rosenhause_on_the_team.mp3" class="audiofile" /></p>
+<!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Rosenhause_on_the_team.mp3" class="audiofile" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Rosenhause_on_the_team.mp3" type="audio/mpeg"></audio>
+</p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
 <p><a title="fn1" name="fn1"></a><a href="case_id_23_id_263.html#txtfn1" class="textfn">[1]</a> Author&rsquo;s interview with Megan O&rsquo;Matz, on February 5, 2008, in Fort Lauderdale, Florida. All further quotes from O&rsquo;Matz, unless otherwise attributed, are from this interview.</p>
