--- a/casestudies/23/casestudy/www/layout/case_id_23_id_269.html
+++ b/casestudies/23/casestudy/www/layout/case_id_23_id_269.html
@@ -321,7 +321,9 @@ font-style:italic;
 </blockquote>
 <p><i>Listen to Demma on sending reporters into dangerous situations.</i><br />
 <span class="footnoteslength"><b>Length:</b> 1 min 28 sec</span><br />
-<img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Demma_dangerous_situations.mp3" class="audiofile" /></p>
+<!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Demma_dangerous_situations.mp3" class="audiofile" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/sunsentinel/Demma_dangerous_situations.mp3" type="audio/mpeg"></audio>
+</p>
 <p>On the other hand, Demma felt that it was only through such reporting that Kestin and O&rsquo;Matz could prove that Miami-Dade residents had committed fraud. All three knew that the reporting duo could gather the most information in the shortest amount of time by splitting up, rather than the safer option of working together. And since Kestin and O&rsquo;Matz had both surveyed poor, unsafe neighborhoods as social services reporters, they were experienced, if slightly uncomfortable, reporting in those neighborhoods alone. Kestin explains her strategy:</p>
 <blockquote>
 <p>I would usually pull my reporter&rsquo;s notebook out of my purse as soon as I got there and walk around with that very visible so that no one would think I was there... to buy drugs or I was a cop. And I&rsquo;m always just very brazen about it. Whoever is standing outside, and there are always a lot of people outside, [I would] just walk up to them.</p>
