--- a/casestudies/1/casestudy/www/layout/case_id_1_id_35.html
+++ b/casestudies/1/casestudy/www/layout/case_id_1_id_35.html
@@ -293,7 +293,9 @@ font-style:italic;
 <p>Western critics found this argument disingenuous. While earlier in its history a Marxist insurrection, ethnic violence or foreign meddling was a threat, by the turn of the 21st century Singapore was stable. <a href="case_id_1_id_3_c_bio.html">Doreen Weisenhaus</a>, a media law specialist based in Hong Kong, says that &ldquo;whatever reasons it might have had at an earlier time, [those don&rsquo;t] seem to exist today. You don&rsquo;t see foment in the street, you don&rsquo;t see people wanting to protest.&rdquo; Grassroots political activity, according to Weisenhaus, &ldquo;is negligible... Even without any kind of crackdown, even without any laws about it, that just doesn&rsquo;t seem to be part of what people want to do with their lives.&rdquo;<sup><a title="txtfn17" name="txtfn17"></a><a href="case_id_1_id_35.html#fn17">[17]</a></sup></p>
 <p><em>Listen to Weisenhaus on Singapore&rsquo;s lack of civil unrest.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 1 min 3 sec</span><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Weisenhaus%20on%20civil%20unrest_lev.mp3" class="audiofile" alt="" /></p>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Weisenhaus%20on%20civil%20unrest_lev.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/feer/Weisenhaus%20on%20civil%20unrest_lev.mp3" type="audio/mpeg"></audio>
+</p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
 <p><a title="fn12" name="fn12"></a><a class="textfn" href="case_id_1_id_35.html#txtfn12">[12]</a> Francis B. Seow, <em>The Media Enthralled: Singapore Revisited.</em> (Boulder: Lynn Rienner Publishers, 1998), p. 40.</p>
