--- a/casestudies/15/casestudy/www/layout/case_id_15_id_167.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_167.html
@@ -293,7 +293,9 @@ font-style:italic;
 </blockquote>
 <p>As Smith and Aldam had hoped, Myers&rsquo; research helped newsroom leaders narrow their search for a new CMS by indicating the biggest bottlenecks in the newsroom process flow, and  spotlighting which changes likely would yield the greatest benefits. The features section, for example, proved to be one of the most complex departments. Its production processes involved an average 164 steps, most of them manual, to produce a finished story. Part of the problem was that artwork and story copy passed through separate, cumbersome editing processes. Editors manually made changes and passed the marked-up page on to the next person. The features department looked like &ldquo;a rope with many different twines,&rdquo; Smith said. He felt that department would be a good candidate for early reform.</p>
 <p><em>Listen to Smith talk about the problems in the process for features.</em><br />
-<img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_problem_in_features.mp3" class="audiofile" alt="" /></p>
+<!-- img border="0" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_problem_in_features.mp3" class="audiofile" alt="" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/timesunion/rex_smith_problem_in_features.mp3" type="audio/mpeg"></audio>
+</p>
 <div class="footnotesblock">
 <h3 class="footnotes">Footnotes</h3>
 <p><a title="fn13" name="fn13"></a><a class="textfn" href="case_id_15_id_167.html#txtfn13">[13]</a> Author&rsquo;s telephone interviews with Patti Myers, May 7, April 11, and 26, 2007. All further quotes from Myers, unless otherwise attributed, are from these interviews.</p>
