--- a/casestudies/17/casestudy/www/layout/case_id_17_id_201.html
+++ b/casestudies/17/casestudy/www/layout/case_id_17_id_201.html
@@ -263,7 +263,9 @@ font-style:italic;
 <p>As for blogs, they had mushroomed&mdash;both those written by reporters and those written by readers. In 2006, Jenner himself began a short, signed weekly blog, &ldquo;Sound Off,&rdquo; where readers could comment, complain, praise or question Jenner directly about stories.<sup><a title="txtfn8" name="txtfn8"></a><a href="case_id_17_id_201.html#fn8">[8]</a></sup> Another early and popular blog was &ldquo;The Pulse,&rdquo; written by the paper&rsquo;s health reporter.</p>
 <p><em>Listen to McHenry discuss staff and reader blogs.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 54 sec</span><br />
-<img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/McHenry_on_blogs.mp3" class="audiofile" /></p>
+<!-- img border="0" alt="" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/McHenry_on_blogs.mp3" class="audiofile" /-->
+<audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/bakersfield/McHenry_on_blogs.mp3" type="audio/mpeg"></audio>
+</p>
 <p><strong><em>Rules unwritten</em></strong>. But the <em>Californian&rsquo;</em>s rules about blogging were unwritten&mdash;and unclear. Some blogs included the reporter&rsquo;s name; others did not. Some were directly related to a reporter&rsquo;s beat, while others explored different topics.<sup><a title="txtfn9" name="txtfn9"></a><a href="case_id_17_id_201.html#fn9">[9]</a></sup>  Though a <em>Californian</em> employee handbook used in 2007 contained clearly stated guidelines about avoiding a conflict of interest in reporting stories, it did not reference the Web. Both Jenner and Web Editor McHenry say the <em>Californian&rsquo;</em>s reporters were professionals and knew where and when to draw the line between reporting and expressing personal opinions on the subjects they covered.</p>
 <p>When a celebrated local murder case finally came to trial in early 2007, editors felt that a blog from the courtroom&mdash;a first for the paper&mdash;would be a logical next step for the news organization.</p>
 <div class="footnotesblock">
